add comments and test