@@ -1,17 +1,74 @@
 package ru.mcashesha.metrics;
 
+/**
+ * JNI bridge to the SimSIMD native C library for high-performance distance computation.
+ *
+ * <p>SimSIMD is a C library that provides highly optimized SIMD implementations of
+ * distance functions, compiled with aggressive optimization flags ({@code -O3 -march=native
+ * -ffast-math}). It automatically detects and uses the best available instruction set
+ * (AVX-512, AVX2, SSE4, NEON, SVE, etc.) at runtime.</p>
+ *
+ * <p>All distance methods are declared {@code native} and implemented in the
+ * {@code simsimd_jni} shared library, which is loaded at class initialization time.
+ * The native side uses {@code GetPrimitiveArrayCritical()} for zero-copy access to
+ * the Java array data, avoiding the overhead of copying array contents between the
+ * JVM heap and native memory.</p>
+ *
+ * <h3>Requirements</h3>
+ * <ul>
+ *   <li>The {@code simsimd_jni} native library must be on the JVM library path
+ *       (set via {@code -Djava.library.path=...} or the system's default library path).</li>
+ *   <li>The native library is built automatically by the Maven build via CMake
+ *       and placed in {@code src/main/native/build/}.</li>
+ *   <li>Native access must be enabled via {@code --enable-native-access=ALL-UNNAMED}.</li>
+ * </ul>
+ *
+ * @see Metric
+ * @see Scalar   Pure Java baseline for comparison
+ * @see VectorAPI Java Vector API alternative
+ */
 class SimSIMD implements Metric {
 
+    /*
+     * Static initializer loads the native shared library (e.g., libsimsimd_jni.so on Linux,
+     * libsimsimd_jni.dylib on macOS). This runs once when the class is first referenced,
+     * making all native methods available for invocation.
+     */
     static {
         System.loadLibrary("simsimd_jni");
     }
 
+    /**
+     * {@inheritDoc}
+     *
+     * <p>Delegates to the SimSIMD native implementation of squared L2 distance,
+     * which uses hardware-specific SIMD instructions selected at runtime.</p>
+     */
     @Override public native float l2Distance(float[] a, float[] b);
 
+    /**
+     * {@inheritDoc}
+     *
+     * <p>Delegates to the SimSIMD native implementation of inner (dot) product,
+     * which uses hardware-specific SIMD instructions selected at runtime.</p>
+     */
     @Override public native float dotProduct(float[] a, float[] b);
 
+    /**
+     * {@inheritDoc}
+     *
+     * <p>Delegates to the SimSIMD native implementation of cosine distance,
+     * which uses hardware-specific SIMD instructions selected at runtime.</p>
+     */
     @Override public native float cosineDistance(float[] a, float[] b);
 
+    /**
+     * {@inheritDoc}
+     *
+     * <p>Delegates to the SimSIMD native implementation of Hamming distance
+     * over byte arrays, which uses hardware-specific SIMD instructions selected
+     * at runtime.</p>
+     */
     @Override public native long hammingDistanceB8(byte[] a, byte[] b);
 
 }
